[package]
authors = ['Evgeni Zhukov <zhukov@soramitsu.co.jp>']
description = 'Consensus accounts for DEX purposes'
edition = '2018'
homepage = 'https://github.com/EmelianPiker/substrate-iroha-bridge-node/tree/zhukov/technical-accounts-DRAFT-01'
license = 'Unlicense'
name = 'technical'
repository = 'https://github.com/EmelianPiker/substrate-iroha-bridge-node/tree/zhukov/technical-accounts-DRAFT-01'
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
